<resources>
    <!-- General use strings -->


    <string name="mail">Mail</string>
    <string name="psw">Password</string>
    <string name="confirm">Conferma!</string>
    <string name="back">Annulla!</string>

    <string name="add_item">Aggiungi</string>

    <!-- Register fragment -->
    <string name="name">Nome</string>
    <string name="register">Registrati</string>

    <!-- Pantry fragment -->
    <string name="home">Home</string>
    <!-- Top  -->
    <string name="app_name">TrackingMyPantry</string>
    <!-- Add item -->
    <string name="add_item_token">Token</string>
    <string name="add_item_desc">Descrizione</string>
    <!-- Home fragment -->
    <string name="barcode">Inserisci barcode</string>
    <string name="home_search">Cerca</string>
    <string name="pantry">Pantry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_label">Login Fragment</string>
    <string name="register_label">Register Fragment</string>
    <string name="main_label">Main Fragment</string>
    <string name="add_label">Add fragment</string>

    <string name="filters">Filtri</string>
    <string name="important_filters">Categorie Importanti</string>
    <string name="pesce">Pesce</string>
    <string name="carne">Carne</string>
    <string name="uova">Uova</string>
    <string name="latte">Latte e derivati</string>
    <string name="cereali">Cereali</string>
    <string name="ortaggi">Ortaggi e frutta</string>
    <string name="grassi">Grassi da condimento</string>
    <string name="date">Inserisci data di scadenza</string>
    <string name="place">Inserisci luogo</string>
    <string name="map">Visualizza su mappa!</string>
    <string name="qrcode">QrCode</string>
    <string-array name="options">
        <item>Pesce</item>
        <item>Carne</item>
        <item>Uova</item>
        <item>Latte e derivati</item>
        <item>Cereali</item>
        <item>Ortaggi e frutta</item>
        <item>Grassi da condimento</item>
    </string-array>
</resources>