<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBox
        android:id="@+id/filter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uova"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/filter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pesce"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter2" />

    <CheckBox
        android:id="@+id/filter6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ortaggi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter3" />

    <CheckBox
        android:id="@+id/filter7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grassi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter4" />

    <CheckBox
        android:id="@+id/filter4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter1" />

    <CheckBox
        android:id="@+id/filter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter5" />

    <CheckBox
        android:id="@+id/filter5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cereali"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter7" />

    <Button
        android:id="@+id/filters_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter6" />

    <Button
        android:id="@+id/filter_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filters_confirm" />
</androidx.constraintlayout.widget.ConstraintLayout>