<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="me.rampo.trackingmypantry.Login"
        android:label="@string/login_label"
        tools:layout="@layout/login">

        <action
            android:id="@+id/action_Login_Register"
            app:destination="@id/RegisterFragment" />
        <action
            android:id="@+id/action_Login_Home"
            app:destination="@id/HomeFragment" />
    </fragment>

    <fragment
        android:id="@+id/RegisterFragment"
        android:name="me.rampo.trackingmypantry.Register"
        android:label="@string/register_label"
        tools:layout="@layout/register">

    <action
        android:id="@+id/action_Register_Login"
        app:destination="@id/LoginFragment"
        app:popUpTo="@+id/LoginFragment"
        app:popUpToInclusive="true"
        />
    </fragment>
    <fragment
        android:id="@+id/QrcodeFragment"
        android:name="me.rampo.trackingmypantry.QRCode"
        android:label="@string/qrcode"
        tools:layout="@layout/qrcode">

        <action
            android:id="@+id/action_Qrcode_Home"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/PantryFragment"
        android:label="@string/pantry"
        android:name="me.rampo.trackingmypantry.Pantry"
        tools:layout="@layout/pantry">

        <action
            android:id="@+id/action_Pantry_Home"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_Pantry_PantryOptions"
            app:destination="@id/PantryOptions" />
        <action
            android:id="@+id/action_Pantry_PantryFilters"
            app:destination="@id/PantryFilters" />
    </fragment>
    <fragment
        android:id="@+id/PantryFilters"
        android:name="me.rampo.trackingmypantry.PantryFilters"
        android:label="@string/filters"
        tools:layout="@layout/pantryfilters">
        <action
            android:id="@+id/action_PantryFilters_Pantry"
            app:destination="@id/PantryFragment"
            app:popUpTo="@+id/PantryFragment"
            app:popUpToInclusive="true"/>
    </fragment>
    <fragment
        android:id="@+id/HomeFragment"
        android:name="me.rampo.trackingmypantry.Home"
        android:label="@string/main_label"
        tools:layout="@layout/home">

        <action
            android:id="@+id/action_Home_Login"
            app:destination="@id/LoginFragment"
            app:popUpTo="@+id/LoginFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_Home_Add"
            app:destination="@id/add_item" />
        <action
            android:id="@+id/action_Home_Pantry"
            app:destination="@id/PantryFragment" />
        <action
            android:id="@+id/action_Home_Qrcode"
            app:destination="@id/QrcodeFragment" />
    </fragment>
    <fragment
        android:name="me.rampo.trackingmypantry.PantryProductOptions"
        android:id="@+id/PantryOptions"
        android:label="@string/pantry"
        tools:layout="@layout/pantryoptions">
        <action
            android:id="@+id/action_PantryOptions_Pantry"
            app:destination="@id/PantryFragment"
            app:popUpTo="@+id/PantryFragment"
            app:popUpToInclusive="true"/>
    </fragment>

    <fragment
        android:id="@+id/add_item"
        android:name="me.rampo.trackingmypantry.AddItem"
        android:label="@string/add_label"
        tools:layout="@layout/add_item">

        <action
            android:id="@+id/action_Add_Home"
            app:destination="@id/HomeFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>